# edge-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d7457fbeaaf_initial_schema_with_ownership.py  2afacec8f9ad_phase_4_portfolio_governance.py  39c0e0c077de_add_tenant_aware_constraints_and_user_.py  45ea4f93c590_add_description_to_variant_and_run.py  5eb9f71bd3fe_fresh_initial_schema.py  70de3272e6c3_add_variant_analytics_table.py  78ffe1e86eb8_add_strategy_and_portfolio_analytics.py  a9c87acd5aac_add_user_model.py  d48d28e32ebc_trade_model_extended.py  d642f6cb92e4_add_display_name_to_strategy_variant_run.py  d95ab70e3bf2_add_run_analytics_table.py  da8ff8da8024_trade_model_v2.py  f1fccad39e87_phase_4_1_enforce_single_user_default_.py
backend/src/edge_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/edge_lab/analytics/: equity.py  hierarchy_compute.py  kelly_simulation.py  metrics.py  monte_carlo.py  regime_detection.py  risk_of_ruin.py  variant_analyzer.py  walk_forward.py
backend/src/edge_lab/api/: main.py
backend/src/edge_lab/api/routes/: admin.py  auth.py  portfolio.py  runs.py  systems.py  trades.py  variants.py
backend/src/edge_lab/cli/: main.py
backend/src/edge_lab/persistence/: database.py  models.py
backend/src/edge_lab/security/: auth.py  password.py
backend/src/edge_lab/services/: dirty_propagation.py  run_service.py
docker/: docker_compose.yml
(+86 files in other folders)
