[project]
name = "edge-lab"
version = "0.1.0"
description = "modular research framework for systematic trading"
authors = [{ name = "Fabian Huber (@x88a9)"}]
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.0",
    "typer>=0.9",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.29"
]
[project.scripts]
edge = "edge_lab.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]